Fix overflow bug

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -1,6 +1,4 @@
-body{
-    min-height: 1100px;
-}
+
 .profile-pic-container{
     position: absolute;
     color: white;
